# RDFGraphGen

./: .gitignore  README.md  pyproject.toml
experiment_suite/: measure.sh  results-single-complex.csv  results-single-simple.csv  results-three-complex.csv  results-three-simple.csv  shape-single-complex.ttl  shape-single-simple.ttl  shape-three-complex.ttl  shape-three-simple.ttl
generated_examples/generated_rdf/: generated_companies.ttl
generated_examples/shape_examples/: company_with_sharing.ttl  tv_series_with_sharing.ttl
rdf_graph_gen/: rdf_graph_generator.py  script.py  shacl_mapping_generator.py  value_generators.py
