[project]
name = "rdfgraphgen"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = ["exrex>=0.11.0", "python-dateutil>=2.8.2", "rdflib>=7.0.0"]

[project.scripts]
rdfgen = "rdf_graph_gen.script:main"

[tool.uv]
package = true

# Disable all ruff checks for now, so that we can introduce it gradually.
[tool.ruff]
select = []
